--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
-<html lang="en"> 
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My first web page</title>
+    <title>My First HTML Page </title>
 </head>
 <body>
-    <!-- <h1>hello world</h1>
-    <h2>hello world</h2>
-    <h3>hello world</h3>
-    <h4>hello world</h4>
-    <h5>hello world</h5>
-    <h6>hello world</h6> -->
-   
-      <!-- <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, illo, ducimus dolorem nesciunt animi beatae sint nisi laudantium sed voluptatum, libero maiores aliquam delectus illum. Odio molestiae iure aperiam in laboriosam voluptate. Molestiae similique consectetur fugit nostrum, blanditiis nam quasi, iure totam eos atque, a fuga. Dignissimos eos totam delectus quas iusto placeat esse qui cumque aperiam accusamus asperiores a libero temporibus ad corrupti dolor, praesentium vero molestiae provident accusantium ipsa? Nisi consequuntur dignissimos qui minus ducimus, eum necessitatibus laboriosam, aliquid ipsa at deleniti quasi quas quo optio? Ad veritatis facilis unde id! Placeat tempora amet recusandae sit vel laborum culpa! Illum qui laborum voluptate voluptas quaerat suscipit quidem quo, quos excepturi ipsam consequuntur nam temporibus explicabo nobis harum, facere obcaecati aspernatur maiores iure. Repellendus asperiores aperiam iure. Magnam est doloribus dolorem sunt sequi odio, laborum aliquam molestias consectetur deserunt accusamus culpa earum quibusdam assumenda incidunt quisquam ad quos fugit a cumque pariatur esse necessitatibus asperiores. Illum pariatur quo, cupiditate, natus suscipit magni tenetur, tempora illo similique corrupti voluptas incidunt debitis consequuntur voluptatum odio neque nesciunt quis sit maxime dolor dolorum fugit repudiandae! Dolorem architecto, adipisci molestias ad voluptatum fuga quia asperiores reprehenderit reiciendis sit unde mollitia nisi quos similique totam odit, doloribus animi? Recusandae excepturi molestias delectus autem libero impedit hic corrupti fugiat sint voluptates, rem quod cupiditate cum officiis nemo mollitia voluptatem, quos modi eveniet? Unde molestias recusandae fugit totam saepe porro doloremque placeat eos, aspernatur, blanditiis deserunt dignissimos, tempora beatae quaerat quibusdam eaque doloribus omnis. Consequatur odio culpa quo provident aperiam odit quos modi consequuntur, quibusdam soluta unde tempore, vel et laboriosam, eaque adipisci assumenda quisquam placeat architecto nobis dicta. Sit dicta quas, adipisci veniam quisquam rerum eaque cumque, assumenda incidunt in similique dolore doloribus ea consectetur vero voluptas deleniti aut iusto saepe nemo. Rem, quae. Necessitatibus quaerat quis optio, deleniti ratione animi expedita, at a omnis vel quod adipisci est repellendus vero magni obcaecati commodi accusamus? Ut unde necessitatibus perferendis tempore asperiores placeat sint. Dolorum sit eveniet magni fuga, nulla amet voluptatibus nostrum deserunt aut similique ad sunt. Sapiente magnam, labore tempore amet fugit molestias saepe dolor eaque rem reprehenderit sint inventore aliquid unde nihil dignissimos! Rerum laudantium consequatur nemo, facilis autem quasi nulla natus tempora ad neque voluptates provident, nesciunt sit vel? Sit, aut? Harum, facere. Dicta, aliquam eveniet reiciendis distinctio blanditiis, et consectetur iusto provident similique natus soluta, sit ab excepturi sequi. Cumque, quos, voluptatibus repellat alias, eaque officia iste molestias facere optio autem quisquam. Aspernatur aperiam, ipsum, nihil blanditiis dolorem quibusdam iste perferendis ut iure ab est vitae distinctio obcaecati reiciendis molestiae? Pariatur ex accusantium quas. Tempora, distinctio. Veniam, saepe cumque esse laboriosam minus nobis, atque nulla distinctio quo sunt aut officiis blanditiis in dicta quasi ipsum omnis eaque nemo neque qui facilis facere soluta ipsam? Omnis voluptatibus neque unde nostrum consequuntur, a harum accusamus blanditiis eius quas eos libero sed, beatae hic porro dolores praesentium est ipsum culpa. Cum illo aspernatur eligendi dolore totam corrupti quis soluta perferendis sapiente debitis? Cum, sit! ipsum dolor sit amet consectetur adipisicing elit. Quo incidunt ad eius quae, dolorem molestias. Provident, ut laudantium quasi aperiam, enim repellendus molestias esse magni mollitia autem quis similique accusamus?</p> -->
-               
-            <!-- <a href="http://www.Youtube.com">Youtube</a> -->
-             <img src="./download.jpg"  alt="some error occured" hieght="200px" width="150px"
+<h1>My name - Bharat Kumar ; 
+    My father name - Rajesh Kumar ; 
+    My mother name - Kamini Kaushal .
+</h1>
+<h2>Branch - ECE - 1 </h2>
+<h3><p>3 -f 334 A 
+       Nehru Nagar , Rakesh Marg 
+       Ghaziabad
+</p></h3>
 </body>
-</html> 
+</html>
